Fixed issue with saved items becoming too big for the page

--- a/perigo/src/main/resources/static/browse/style.css
+++ b/perigo/src/main/resources/static/browse/style.css
@@ -127,6 +127,9 @@ body{
 
   position: relative;
   top: 0px;
+
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .saved-title{
